--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
-html, body{
-    height: 100%
-  }
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, 
+body {
+    height: 100%;
+}
