--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 
-html,
-body,
-#root,
-.app,
-.content {
-  height: 100%;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html,body,#root,.app{
+  margin: 0;
+  padding: 0;
   width: 100%;
-  font-family: "Source Sans Pro", sans-serif;
+  height: 100%;
+  box-sizing: border-box;
 }
 
-.app {
+.app{
   display: flex;
-  position: relative;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+.content{
+ flex-grow: 1;
+ display: flex;
+ flex-direction: column;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #e0e0e0;
+.content_page{
+  flex-grow:1;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-} 
+
+
