--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -39,9 +39,30 @@
 
             &__content
             {
+                margin-top: 24px;
+                flex: 1;
                 display: flex;
                 flex-direction: column;
                 gap: 3px;
+                justify-content: space-between;
+
+                .itemCampaign
+                {
+                    &__container
+                    {
+                        display: flex;
+                        padding: 8px 16px;
+                        gap: 24px;
+                    }
+
+                    &__avatar
+                    {
+                        align-self: center;
+                    }
+
+                    &__body
+                    {}
+                }
             }
         }
     }
@@ -53,9 +74,16 @@
 
         .listNFT
         {
+
             flex: 2;
-            display: flex;
-            flex-direction: column;
+            height: fit-content;
+
+            .container
+            {
+                padding: 24px;
+                display: flex;
+                flex-direction: column;
+            }
 
             &__title
             {
@@ -73,25 +101,30 @@
 
         .wallet
         {
+
             flex: 1;
             height: fit-content;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 16px 0px;
+
+
+            .container
+            {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 24px;
+            }
 
             &__input
             {
-                width: 80%;
+                width: 70%;
                 padding: 16px 24px;
                 font-size: 1.5rem;
             }
 
             &__button
             {
-                margin-top: 24px;
-                padding: 16px;
-                width: 80%;
+                margin-top: 32px;
+                padding: 24px;
             }
         }
     }
