--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -48,6 +48,10 @@
 
                 .itemCampaign
                 {
+                    background-color: bisque;
+
+                    color: black;
+
                     &__container
                     {
                         display: flex;
